# Agentic_AI_presentation

./: .gitignore  Contexte.txt  Final_Project_Designing_Agentic_Systems.ipynb  Main_Final_Project_Designing_Agentic_Systems.ipynb  README.md  pyproject.toml  requirements.txt
